mobile/mobile.scss
@import "variables";

.category-list.with-topics {
  .category-list-banner:after {
    left: 1.6rem;
    bottom: 1rem;
  }
  .category-list-item {
    position: relative;
    border-bottom: none !important;
    border-top: none !important;
    margin: 0;
    padding: 0;

    tbody {
      border: $border;
      border-top: none;
    }
    tr {
      border: none;
      margin-bottom: 0;
      padding: 0 0.5em;
      &:first-of-type {
        th.main-link {
          padding: 1em 0.5em 0.8em 0.5em;
        }
      }
      &.category-description {
        display: flex;
        font-size: var(--font-up-1);
        margin-top: 0;
        td {
          padding-right: 1.8em;
          max-width: 400px;
        }
      }
      &.category-topic-link {
        display: flex;
        justify-content: space-between;
        &:last-of-type {
          padding-bottom: 1em;
        }
        td.main-link {
          font-size: var(--font-up-1);
          padding-left: 1em;
        }
        a.title {
          color: var(--tertiary);
        }
      }
    }
    footer {
      border: none;
      padding: 0;
      .category-stat {
        position: absolute;
        top: 1.5em;
        right: 0px;
        display: block;
      }
    }
  }
}
@if $hide_category_color == "true" {
  .category-list {
    .category-list-banner:after {
      left: 1.2rem;
    }
    .category-list-item {
      border: none !important;
    }
  }
}

